Post refactorings
