# db/schema.rb
@@ -14,7 +14,7 @@ ActiveRecord::Schema[8.0].define(version: 2025_12_05_195103) do
   create_table "posts", force: :cascade do |t|
     t.string "title"
     t.text "content"
-    t.boolean "status"
+    t.boolean "published", default: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
   end
